Edit .gitignore - remove the logs folder from git track

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#remove the log folder from uploading
+logs/
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,python
 
